# chip-8-emulator

./: CMakeLists.txt  README.md  configuration.h  cpu.c  cpu.h  main.c
cpu/: cpu.c  cpu.h
read_file/: read_file.c  read_file.h
